# demes-forward-rs

./: Cargo.toml  README.md
src/: error.rs  graph.rs  lib.rs  time.rs
tests/: tests.rs
