[package]
name = "demes-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
proptest = "~1"

[dependencies]
demes = { version =  ">0.2.1,<0.3.0" }
ndarray = "0.15.4"
thiserror = "~1"
