[package]
name = "demes-forward"
authors = ["Kevin R. Thornton"]
description = "rust API for iterating demes models forwards in time"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/molpopgen/demes-forward-rs"
repository = "https://github.com/molpopgen/demes-forward-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
demes = { version =  ">0.2.1,<0.3.0" }
ndarray = "0.15.4"
thiserror = "~1"
